# fly_in

./: Makefile  README.md  deleteme.txt  pyproject.toml  requirements.txt
fly_in/: __init__.py  delete.txt  main.py  models.py  parser.py  pathfinding.py  renderer.py  simulator.py
maps/challenger/: 01_the_impossible_dream.txt
maps/easy/: 01_linear_path.txt  02_simple_fork.txt  03_basic_capacity.txt
maps/hard/: 01_maze_nightmare.txt  02_capacity_hell.txt  03_ultimate_challenge.txt
maps/medium/: 01_dead_end_trap.txt  02_circular_loop.txt  03_priority_puzzle.txt
src/flyin/: cli.py  model.py  parser.py  viz_pygame.py
