[project]
name = "flyin"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pygame>=2.5"]

[project.optional-dependencies]
dev = ["flake8==7.*", "mypy==1.*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["flyin"]